# baker-rs

./: Cargo.toml  LICENSE  README.md
docs/: version-templating.md
docs/superpowers/plans/: 2026-04-06-post-build-hook.md
example/: baker.toml  version.h
examples/: README.md
examples/complete/: README.md  baker.toml  version.h
examples/convert/: README.md  baker.toml
examples/custom-fields/: README.md  baker.toml  board_config.h
examples/merge/: README.md  baker.toml  version.h
examples/pack/: README.md  baker.toml  version.h
examples/version-c-string/: README.md  baker.toml  version.h
examples/version-cmake/: CMakeLists.txt  README.md  baker.toml
src/: cli.rs  config.rs  error.rs  firmware.rs  lib.rs  main.rs  recipe.rs  version.rs
src/config/: error.rs  loader.rs  schema.rs
src/firmware/: error.rs  formats.rs  image.rs
src/firmware/formats/: bin.rs  binary.rs  elf.rs  hex.rs  ihex.rs  srec.rs
src/recipe/: builder.rs  context.rs  convert.rs  error.rs  executor.rs  group.rs  hook.rs  merge.rs  ota.rs  pack.rs  render.rs
src/recipe/builtin_headers/: mota.delbin
src/version/: error.rs  extractor.rs  header.rs  template.rs
