[package]
name = "baker-rs"
version = "0.1.0"
edition = "2021"
authors = ["nasihs <nasihs1113@gmail.com>"]
description = "Build Automation Kit for Embedded Release"
repository = "https://github.com/nasihs/baker-rs"

[[bin]]
name = "baker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
