[package]
name = "baker-rs"
version = "0.2.0"
edition = "2021"
authors = ["nasihs <nasihs1113@gmail.com>"]
description = "Build Automation Kit for Embedded Release"
repository = "https://github.com/nasihs/baker-rs"

[[bin]]
name = "baker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
ihex = "3.0.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.10"
